{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 26,
  "lineage": "b223584c-69d7-0e48-f583-9544dece4b63",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "psc_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.2.0.2",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-07-02T14:06:45.445-07:00",
            "id": "projects/consumer-test-project-456/regions/us-central1/addresses/psc-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "psc-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "consumer-test-project-456",
            "purpose": "GCE_ENDPOINT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/consumer-test-project-456/regions/us-central1/addresses/psc-ip",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/consumer-test-project-456/regions/us-central1/subnetworks/psc-subnet",
            "timeouts": {
              "create": "10m",
              "delete": "10m"
            }
          },
          "dependencies": [
            "google_compute_network.consumer_vpc",
            "google_compute_subnetwork.psc_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_postgres_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5432"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-02T14:06:13.767-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "10.0.0.0/8"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/consumer-test-project-456/global/firewalls/consumer-allow-postgres-egress",
            "log_config": [],
            "name": "consumer-allow-postgres-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/consumer-test-project-456/global/networks/consumer-vpc",
            "priority": 1000,
            "project": "consumer-test-project-456",
            "self_link": "https://www.googleapis.com/compute/v1/projects/consumer-test-project-456/global/firewalls/consumer-allow-postgres-egress",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.consumer_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default_allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-07-02T14:06:13.843-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/consumer-test-project-456/global/firewalls/consumer-allow-internal",
            "log_config": [],
            "name": "consumer-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/consumer-test-project-456/global/networks/consumer-vpc",
            "priority": 1000,
            "project": "consumer-test-project-456",
            "self_link": "https://www.googleapis.com/compute/v1/projects/consumer-test-project-456/global/firewalls/consumer-allow-internal",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.consumer_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-02T14:06:13.778-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/consumer-test-project-456/global/firewalls/consumer-allow-ssh",
            "log_config": [],
            "name": "consumer-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/consumer-test-project-456/global/networks/consumer-vpc",
            "priority": 1000,
            "project": "consumer-test-project-456",
            "self_link": "https://www.googleapis.com/compute/v1/projects/consumer-test-project-456/global/firewalls/consumer-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.consumer_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "psc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2025-07-02T14:06:57.002-07:00",
            "forwarding_rule_id": 2684312992078111134,
            "id": "projects/consumer-test-project-456/regions/us-central1/forwardingRules/psc-endpoint",
            "ip_address": "10.2.0.2",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "psc-endpoint",
            "network": "https://www.googleapis.com/compute/v1/projects/consumer-test-project-456/global/networks/consumer-vpc",
            "network_tier": "PREMIUM",
            "project": "consumer-test-project-456",
            "psc_connection_id": "129342218732437506",
            "psc_connection_status": "ACCEPTED",
            "recreate_closed_psc": false,
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/consumer-test-project-456/regions/us-central1/forwardingRules/psc-endpoint",
            "service_directory_registrations": [
              {
                "namespace": "goog-psc-default"
              }
            ],
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/consumer-test-project-456/regions/us-central1/subnetworks/psc-subnet",
            "target": "https://www.googleapis.com/compute/v1/projects/wbb8462e03c213cf2p-tp/regions/us-central1/serviceAttachments/a-3b392ba3ad5f-psc-service-attachment-662dd4d4e7398043",
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            }
          },
          "dependencies": [
            "google_compute_address.psc_ip",
            "google_compute_network.consumer_vpc",
            "google_compute_subnetwork.psc_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "consumer_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/consumer-test-project-456/global/networks/consumer-vpc",
            "mtu": 0,
            "name": "consumer-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "7751287426739872192",
            "project": "consumer-test-project-456",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/consumer-test-project-456/global/networks/consumer-vpc",
            "timeouts": {
              "create": "15m",
              "delete": "15m",
              "update": "15m"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-02T14:06:13.551-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/consumer-test-project-456/regions/us-central1/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/consumer-test-project-456/global/networks/consumer-vpc",
            "project": "consumer-test-project-456",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/consumer-test-project-456/regions/us-central1/routers/nat-router",
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            }
          },
          "dependencies": [
            "google_compute_network.consumer_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "consumer-test-project-456/us-central1/nat-router/consumer-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "consumer-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "consumer-test-project-456",
            "region": "us-central1",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "projects/consumer-test-project-456/regions/us-central1/subnetworks/vm-subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.consumer_vpc",
            "google_compute_router.nat_router",
            "google_compute_subnetwork.vm_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "psc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-02T14:06:13.807-07:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/consumer-test-project-456/regions/us-central1/subnetworks/psc-subnet",
            "ip_cidr_range": "10.2.0.0/24",
            "name": "psc-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/consumer-test-project-456/global/networks/consumer-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "consumer-test-project-456",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/consumer-test-project-456/regions/us-central1/subnetworks/psc-subnet",
            "stack_type": "IPV4_ONLY",
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            }
          },
          "dependencies": [
            "google_compute_network.consumer_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vm_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-02T14:06:13.875-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/consumer-test-project-456/regions/us-central1/subnetworks/vm-subnet",
            "ip_cidr_range": "10.1.0.0/24",
            "name": "vm-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/consumer-test-project-456/global/networks/consumer-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "consumer-test-project-456",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/consumer-test-project-456/regions/us-central1/subnetworks/vm-subnet",
            "stack_type": "IPV4_ONLY",
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            }
          },
          "dependencies": [
            "google_compute_network.consumer_vpc"
          ]
        }
      ]
    }
  ]
}